# playwright_py_cursor_framework

./: .env  README.md  conftest.py  pyproject.toml  requirements.txt
api/: __init__.py  api_client.py
config/: __init__.py  config.py
features/api/: user_api.feature
features/ui/: login.feature
pages/: __init__.py  base_page.py
tests/: __init__.py
tests/steps/: api_steps.py  login_steps.py
utils/: __init__.py  gherkin_utils.py
